Fixed site responsiveness on mobile
html width was not set to 100% so the website was not being fully filled at mobile size, project grid min width was decreased with @media

--- a/styles/header.css
+++ b/styles/header.css
@@ -66,7 +66,7 @@
     top: 0;
     right: 0;
     height: 100vh;
-    width: 250px;
+    width: 225px;
     z-index: 1031;
     background-color: whitesmoke;
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
